--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>com.github.thinker0</groupId>
   <artifactId>servo-opentsdb-publisher</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   
   <description>Servo OpenTSDB Publisher</description>
   <url>http://github.com/thinker0/servo-opentsdb-publisher</url>
@@ -134,6 +134,10 @@
         <configuration>
           <pushChanges>false</pushChanges>
           <localCheckout>false</localCheckout>
+          <autoVersionSubmodules>true</autoVersionSubmodules>
+          <useReleaseProfile>false</useReleaseProfile>
+          <releaseProfiles>release</releaseProfiles>
+          <goals>deploy nexus-staging:release</goals>
         </configuration>
       </plugin>
       <plugin>
