--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache</groupId>
@@ -42,6 +40,7 @@
     <connection>scm:git:https://github.com/thinker0/servo-opentsdb-publisher.git</connection>
     <developerConnection>scm:git:git@github.com:thinker0/servo-opentsdb-publisher.git</developerConnection>
     <url>https://github.com/thinker0/servo-opentsdb-publisher</url>
+    <tag>servo-opentsdb-publisher-1.0.0</tag>
   </scm>
 
   <dependencies>
@@ -86,7 +85,7 @@
         <version>3.0.1</version>
         <configuration>
           <encoding>UTF-8</encoding>
-          <resources/>
+          <resources />
         </configuration>
       </plugin>
       <plugin>
