--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>com.github.thinker0</groupId>
   <artifactId>servo-opentsdb-publisher</artifactId>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>1.0.1</version>
   
   <description>Servo OpenTSDB Publisher</description>
   <url>http://github.com/thinker0/servo-opentsdb-publisher</url>
@@ -40,7 +40,7 @@
     <connection>scm:git:https://github.com/thinker0/servo-opentsdb-publisher.git</connection>
     <developerConnection>scm:git:git@github.com:thinker0/servo-opentsdb-publisher.git</developerConnection>
     <url>https://github.com/thinker0/servo-opentsdb-publisher</url>
-    <tag>HEAD</tag>
+    <tag>servo-opentsdb-publisher-1.0.1</tag>
   </scm>
 
   <dependencies>
